--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,22 @@
-"Your Name":
+"Hasky Egyeri Fynn":
   bold: true
 
-"Hasky Egyeri Fynn":
-  url: https://www.google.com/?q=Hasky+Egyeri+Fynn
+"Robert White":
+  url: https://www.google.com/?q=Robert+White
+
+"Charles Green (MIT)":
+  name: Charles Green
+  url: https://www.google.com/?q=Charles+Green+MIT
+
+"Charles Green (Stanford)":
+  name: Charles Green
+  url: https://www.google.com/?q=Charles+Green+Stanford
+
+"Garrett Harris":
+  url: https://www.google.com/?q=Garrett+Harris
+
+"James Wang":
+  url: https://www.google.com/?q=James+Wang
+
+"John Doe":
+  url: https://www.google.com/?q=John+Doe
