--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,44 +1,51 @@
 primary_name: "Hasky Egyeri Fynn"
+secondary_name: ""
 navbar_name: "Hasky Egyeri Fynn"
 
 positions:
-- name: Teaching and Research Assistant
-- logo: /assets/images/badges/knustlogo.png
-  name: Department of Telecommunication Engineering
+  - '<span class="no-break"><img src="assets/images/badges/knustlogo.png" alt="Kwame Nkrumah University of Science and Technology" class="inline-badge"/></span> BSc., Telecommunication Engineering'
 
 email: "fynnhasky(AT)gmail(DOT)com"
 # cv_link: link-to-your-cv-file
+#gscholar: MX0S_1IAAAAJ
 github: HaskyFynn
-twitter: hasky1
-# linkedin: your-linked-in-id
-# orcid: 0000-0000-0000-0000
+twitter: _hasky1
+# wechat_qrcode: assets/images/etc/wechat.png
+# wechat_prompt: >-
+#   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
+linkedin: HaskyEgyeriFynn
+orcid: 0009-1111-1111-1111
 
 short_bio: >-
-  Hi, my name is Hasky Egyeri Fynn. I earned my B.S. degree from ....<br><br>
+  I am an undergraduate student researcher from the University of Hong Kong (HKU). My research interests include Parameter-Efficient Fine-Tuning (PEFT) and conditional non-autoregressive text generation.
 
-  My research interests lie in ...<br><br>
-
-  I love music and I bake the best pastries.<br><br>
-
-portrait_url: /assets/images/photos/portrait.jpg
-portrait_caption: >-
-  My best picture :)
+portrait_url: assets/images/photos/portrait.jpg
 
 education:
 - name: Kwame Nkrumah University of Science and Technology
-  logo: /assets/images/badges/knustlogo.png
-  position: BSc. Telecommunication Engineering
+  logo: assets/images/badges/knustlogo.png
+  position: Bachelor of Science (Telecommunication Engineering)
   date: Jan. 2021 - Aug. 2024
 
-# experience:
-# - name: Peking University
-#   logo: /assets/images/badges/PKU_red.png
-#   position: Research Intern
-#   date: Sep. 2021 - Jul. 2021
+
+experience:
+- name: Kwame Nkrumah University of Science and Technology
+  logo: assets/images/badges/knustlogo.png
+  position: Teaching Assistant
+  date: Oct. 2024 - Present
+- name: Kwame Nkrumah University of Science and Technology
+  logo: assets/images/badges/via.png
+  position: Research Assistant
+  date: Oct. 2024 - Present
+- name: Responsible AI Lab
+  logo: assets/images/badges/HKU.png
+  position: Research Assistant
+  date: Oct. 2024 - Present
+- name: MP Infrastructure Ghana
+  position: Telecom Cell Site Engineer, Intern
+  date: Sep. 2022 - Dec. 2022 & Sep 2023 - Dec. 2023
 
 
 awards:
-- name: AAA
-  date: 2018 - 2019
-- name: AAA
-  date: 2018
+- name: Provost's Honors List, College of Engineering, KNUST
+  date: 2024
