--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,5 @@
 pages:
 - name: Home
-  url: /
+  url: ./
 - name: Publications
-  url: /publications
-- name: Showcase
-  url: /showcase
+  url: publications
