--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -10,7 +10,7 @@ email: "fynnhasky(AT)gmail(DOT)com"
 #gscholar: MX0S_1IAAAAJ
 github: HaskyFynn
 twitter: _hasky1
-linkedin: HaskyEgyeriFynn
+linkedin: hasky-egyeri-fynn
 orcid: 0009-1111-1111-1111
 
 short_bio: >-
