--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -29,7 +29,7 @@ experience:
   logo: assets/images/badges/knustlogo.png
   position: Teaching Assistant
   date: Oct. 2024 - Present
-- name: Kwame Nkrumah University of Science and Technology
+- name: Virtual InfoSec Africa Cybersecurity Training Lab
   logo: assets/images/badges/via.png
   position: Research Assistant
   date: Oct. 2024 - Present
