--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -12,8 +12,7 @@ linkedin: hasky-egyeri-fynn
 orcid: 0009-0007-4432-4399
 
 short_bio: >-
-  I am an undergraduate student researcher from the University of Hong Kong (HKU). My research interests include Parameter-Efficient Fine-Tuning (PEFT) and conditional non-autoregressive text generation.
-
+  I'm a tutor and researcher at the Kwame Nkrumah University of Science and Technology. My research focus lies in the security of wireless communication systems particularly application and transport layer security, QUIC & IoT security, as well as security in 5G and beyond 5G networks. I’m also interested in the application of ML, AI, and blockchain to enhance security in these domains. As a learner and teacher at heart, I believe the meaning of life is to find your gift and the purpose of life is to give it away.
 portrait_url: assets/images/photos/portrait.jpg
 
 education:
