--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,7 @@
 "Hasky Egyeri Fynn":
   bold: true
   url: https://www.google.com/?q=Hasky+Fynn
+
+"Hasky Fynn":
+  bold: true
+  url: https://www.google.com/?q=Hasky+Fynn
